--- a/css/mapsyle.css
+++ b/css/mapsyle.css
@@ -30,7 +30,18 @@
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
-    background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
+    text-align: center;
+}
+
+.legend i {
+    width: 18px;
+    height: 14px;
+    float: left;
+}
+
+.legend p{
+    font-weight: bold;
+    font-size: 0.8em;
 }
